tests/paczka1/small_fuzzy/46931689.err
Error in line 6: PKMMiwT8Bxh A491 27,7
Error in line 9: 9qN2 A646 54,9
Error in line 7: PKMMiwT8Bxh S589 63,1
Error in line 11: 9qN2 A116 24,3
